After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759565 - Fix regression in cr_tknzr_consume_chars()
Fix regression in cr_tknzr_consume_chars()
Status: RESOLVED FIXED
Product: libcroco
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: libcroco maintainers
libcroco maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-16 23:44 UTC by Florian Müllner
Modified: 2015-12-17 12:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix regression in cr_tknzr_consume_chars() (1.14 KB, patch)
2015-12-16 23:44 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2015-12-16 23:44:08 UTC
See patch. This fixes an infinite loop when parsing an @import statement.
Comment 1 Florian Müllner 2015-12-16 23:44:14 UTC
Created attachment 317536 [details] [review]
Fix regression in cr_tknzr_consume_chars()

Commit bc9b2c339e introduced an intermediate variable to account
for the difference in signedness between cr_tknzr_consume_chars()
and cr_input_consume_chars(), but missed that the variable in
question is an in-out variable that requires proper initialization.
Comment 2 Ignacio Casal Quinteiro (nacho) 2015-12-17 12:39:35 UTC
Review of attachment 317536 [details] [review]:

Looks good.
Comment 3 Florian Müllner 2015-12-17 12:40:48 UTC
Attachment 317536 [details] pushed as f4f9e6d - Fix regression in cr_tknzr_consume_chars()