Fix regression in cr_tknzr_consume_chars()

Commit bc9b2c339e introduced an intermediate variable to account
for the difference in signedness between cr_tknzr_consume_chars()
and cr_input_consume_chars(), but missed that the variable in
question is an in-out variable that requires proper initialization.

https://bugzilla.gnome.org/show_bug.cgi?id=759565